# hmm

./: .gitignore  Cargo.nix  Cargo.toml  README.md  build.rs  derivation.nix  flake.nix  shell.nix
.github/workflows/: ci.yml
completions/zsh/: _hmm
src/: add.rs  cli.rs  darwin.rs  files.rs  git.rs  main.rs  nix.rs  types.rs  vscode.rs  vscode_search.rs
