[package]
name = "hmm"
version = "0.3.0"
authors = ["Jakub Kozłowski <kubukoz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3.17"
colored="2"
rnix="0.9.0"
rowan="0.12.6"

[build-dependencies]
structopt="0.3.17"
clap="2.23.3"
