[package]
name = "hmm"
version = "0.4.1"
authors = ["Jakub Kozłowski <kubukoz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3.17"
colored="2"
rnix="0.9.0"
rowan="0.12.6"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
reqwest = { version = "0.11", features = ["json","blocking"]}
chrono = { version = "0.4", features = ["serde"]}

[build-dependencies]
structopt="0.3"
clap="2.23"
