[package]
name = "hmm"
version = "0.7.5"
authors = ["Jakub Kozłowski <kubukoz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3"
colored="2"
rnix="0.10"
rowan="0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
git2="0.14"
reqwest = { version = "0.11", features = ["json","blocking"]}

[build-dependencies]
structopt="0.3"
clap="3.1"
